Publication IE fixes + image caption delete bug fixed
git-svn-id: http://svn.scratchpads.eu/svn/scratchpads/trunk@3048 ccd0800f-5989-4abc-b5cb-522e550fd16a

--- a/modules/publication/css/publication.css
+++ b/modules/publication/css/publication.css
@@ -88,7 +88,8 @@
 }
 
 #publication-tabs legend{
- font-weight: 800; 
+ font-weight: 800;
+ color: #000; 
 }
 
 #publication-tabs legend.collapse-processed{
@@ -372,5 +373,9 @@ html[xmlns] .clearfix {
 	height: 1%;
 }
 
+/* IE Tweaks */
+.wysiwyg-format{
+  display: none;
+}
 
 
